# FileThings

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
public/: basic.css
src/: main.jsx  (+3 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/functions/_utils/: file.js  tool.js
src-tauri/resources/functions/executables/brew/: config.json  worker.js
src-tauri/resources/functions/executables/exiftool/: config.json  worker.js
src-tauri/resources/functions/executables/ffmpeg/: config.json  worker.js
src-tauri/resources/functions/executables/magick/: config.json  worker.js
src-tauri/resources/functions/executables/pandoc/: config.json  worker.js
src-tauri/resources/functions/files/binary.join_slices/: config.json  worker.js
src-tauri/resources/functions/files/binary.split/: config.json  worker.js
src-tauri/resources/i18n/: languages.json
src-tauri/resources/i18n/en/: app.json  file-info.json  raw.json
src-tauri/resources/i18n/zh/: app.json  file-info.json  raw.json
src-tauri/src/: errors.rs  main.rs
src-tauri/src/app/: actions.rs  frontend.rs  logger.rs  mod.rs  resource.rs
src-tauri/src/commands/: array_cmd.rs  command_names.rs  command_router.rs  dict_cmd.rs  env_cmd.rs  exif_cmd.rs  file_cmd.rs  font_cmd.rs  http_cmd.rs  i18n_cmd.rs  image_cmd.rs  mod.rs  path_cmd.rs  semver_cmd.rs  shell_cmd.rs  structures.rs  template_cmd.rs  text_cmd.rs  tools_cmd.rs  updater_cmd.rs  url_cmd.rs  utils.rs  zip_cmd.rs
src-tauri/src/config/: caller.rs  init.rs  mod.rs  structures.rs
src-tauri/src/functions/: mod.rs
src-tauri/src/functions/common/: structures.rs
src-tauri/src/functions/file/: command_caller.rs  methods.rs  mod.rs  read.rs  structures.rs
src-tauri/src/functions/tool/: mod.rs  read.rs  structures.rs
src-tauri/src/thelib/: _exif_by_crate.rs  compress.rs  download.rs  exiftool.rs  export.rs  file_attribute.rs  file_binary.rs  file_count.rs  file_find.rs  file_path.rs  hash.rs  image.rs  image_rmbg.rs  json.rs  mod.rs  shell.rs  svg.rs  sys.rs  text.rs  version.rs
(+105 files in other folders)
