[package]
name = "project"
version = "0.0.0"
description = "A toolbox for files"
authors = ["you"]
edition = "2021"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
reqwest = "0.12.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kamadak-exif = "0.5.5"
image = "0.25.0"
# vtracer - image to svg
vtracer = "0.6.3"
# rodio - audio playback lib
# rodio = "0.17.3"
lazy_static = "1.4.0"
base64 = "0.22.0"
dirs = "5.0.1"
csv = "1.3.0"
resvg = "0.40.0"
regex = "1.10.4"
uuid = "1.8.0"
# chrono - date time lib
chrono = "0.4.37"
zip = "1.1.0"
futures = "0.3.30"
flexi_logger = { version = "0.28", features = [
    "async",
    "specfile",
    "compress",
] }
async-recursion = "1.1.1"
once_cell = "1.19.0"
sysinfo = "0.30.11"
toml = "0.8.12"
oxipng = "9.1.1"
ttf-parser = "0.21.1"
trash = "5.0.0"
md5 = "0.7.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
anyhow = "1.0.89"
fast_image_resize = "5.0.0"
ndarray = "0.16.1"
rmbg = { git = "https://github.com/nodewee/rmbg", rev = "8db67b1", default-features = false }
# TAURI DEPENDENCIES
tauri = { version = "2.0", features = [] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"

[target."cfg(unix)".dependencies] # for linux and macos. windows does not support xattr
xattr = "1.3.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
# fix the PATH env var on macOS and Linux when running a GUI app (that do not inherit the $PATH from the shell dotfiles)
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
# tauri-plugin-devtools = { git = "https://github.com/crabnebula-dev/devtools", version = "2.0.0-beta.0" }
